Correct long group forum topic titles overlapping with topic's tags. Fixes #3643
git-svn-id: https://buddypress.svn.wordpress.org/trunk@5224 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -1850,8 +1850,6 @@ ul#topic-post-list li div.post-content {
 }
 div.topic-tags {
 	font-size: 11px;
-	float: right;
-	margin-top: -25px;
 }
 div.admin-links {
 	color: #888;
